[package]
name = "reactor-sites"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Reactor Sites capability — app hosting as an orchestration layer over functions and storage"

[features]
default = ["framework-static", "framework-hono", "framework-nextjs"]
framework-static = []
framework-hono = []
framework-nextjs = []
domain-acme = ["rustls-acme"]

[dependencies]
# Workspace crates
reactor-core.workspace = true
reactor-policy.workspace = true
reactor-cache.workspace = true

# Async runtime
tokio.workspace = true

# Web framework
axum = { workspace = true, features = ["multipart"] }
tower.workspace = true
tower-http.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Database
sqlx.workspace = true

# IDs and time
uuid.workspace = true
chrono.workspace = true

# Error handling
thiserror.workspace = true

# Observability
tracing.workspace = true

# Async utilities
async-trait.workspace = true
futures.workspace = true

# Byte buffers
bytes.workspace = true

# Tokio utilities
tokio-util.workspace = true

# Regex and lazy init
once_cell.workspace = true
regex.workspace = true

# Validation
validator.workspace = true

# Crypto (for bundle verification)
base64.workspace = true
sha2.workspace = true
hex.workspace = true

# Config
figment.workspace = true

# HTTP client (for functions and storage clients)
url.workspace = true
reqwest.workspace = true

# Zip handling
zip.workspace = true

# Path matching for route resolution
matchit.workspace = true

# MIME type detection
mime_guess.workspace = true

# DNS resolution for domain verification
trust-dns-resolver = { version = "0.23", features = ["tokio-runtime"] }

# ACME certificate provisioning (optional)
rustls-acme = { workspace = true, optional = true }

# OpenAPI
utoipa.workspace = true

[dev-dependencies]
testcontainers.workspace = true
testcontainers-modules.workspace = true
tempfile = "3"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
reactor-auth.workspace = true
tracing-subscriber.workspace = true
